add end zone for route

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,6 +263,8 @@ set(sources
 	source/util/gldebugdrawer.cpp
 	source/util/scriptwatcher.h
 	source/util/filteredrayresultcallback.h
+	source/util/basicshapes.h
+	source/util/basicshapes.cpp
 
 
 	source/network/networkmanager.h
