add sound which changes according RPM and gear shifts :red_car: :dash:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,6 +189,8 @@ set(sources
 
 	source/sound/audiomanager.h
 	source/sound/audiomanager.cpp
+	source/sound/carsounddata.cpp
+	source/sound/carsounddata.h
 
 	source/model/bikemodel.h
 	source/model/bikemodel.cpp
