--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ find_package(OpenGL REQUIRED)
 find_package(OpenSceneGraph REQUIRED)
 
 # Bullet
-set(BULLET_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/BULLET_PHYSICS")
+set(BULLET_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/BULLET_PHYSICS) #${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/BULLET_PHYSICS
 find_package(BULLET REQUIRED)
 
 # FMOD
